--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-home-title: coder
+home-title: CODER
 description: 学会分享
+header-img: assets/img/banner.jpg
 ---
 
 {% include header.html %}
