--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 home-title: CODER
 description: 学会分享
-header-img: assets/img/banner.jpg
+header-img: assets/img/hero.jpg
 ---
 
 {% include header.html %}
