--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: CODER
-description: 学会分享
+home-title: RPZER
+description: 热爱.拼搏.执着
 header-img: assets/img/hero.jpg
 ---
 
